[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = [
    "Ian Boyes",
    "Reece Hoffmann",
    "Christine Wong Chong"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pyyaml = "^6.0"
black = "^23.3.0"
ruamel-yaml = "^0.17.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
