[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = [
    "Ian Boyes",
    "Reece Hoffmann",
    "Christine Wong Chong"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
ruamel-yaml = "^0.18.6"
sphinx = "^7.3.7"
piccolo-theme = "^0.21.0"
sphinx-autobuild = "^2024.4.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
