[tool.poetry]
name = "dev"
version = "0.0.0"
description = ""
authors = [
    "Ian Boyes",
    "Reece Hoffmann",
    "Christine Wong Chong"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^5.0.0"
piccolo-theme = "^0.21.0"
sphinx-autobuild = "^2024.4.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
